# gpsd2nmea

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGPSD.cmake
src/: CMakeLists.txt  ais.c  cmd_help.c  crc.c  gpsd2nmea.h  main.c  tll.c  udp.c
test/: CMakeLists.txt  test_crc1.c  test_str_ais1.c  test_str_tll1.c  test_udp1.c  test_udp_tll.c
